--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Drawing with SVG</title>
-    <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet"> type='text/css'>
     <style media="screen">
 
       body {
@@ -21,7 +21,7 @@
 
       #title{
               position:absolute;
-              font-family:Roboto, sans-serif;
+              font-family:Lato, sans-serif;
               color:#ecf0f1;
               width:100%;
               text-align:center;
