--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Drawing with SVG</title>
-   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet"> type='text/css'>
+   <link href="https://fonts.googleapis.com/css?family=Lato&display=swap" rel="stylesheet">
     <style media="screen">
 
       body {
